cabal-version: 2.2
name: bytesmith
version: 0.2.0.0
synopsis: Nonresumable byte parser
description:
  Parse bytes as fast as possible. This is a nonresumable parser
  that aggresively uses `UnboxedSums` to avoid performing any
  allocations.
homepage: https://github.com/andrewthad/bytesmith
bug-reports: https://github.com/andrewthad/bytesmith/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Bytes.Parser
    Data.Bytes.Parser.BigEndian
    Data.Bytes.Parser.Ascii
    Data.Bytes.Parser.Latin
    Data.Bytes.Parser.Unsafe
    Data.Bytes.Parser.Utf8
  other-modules:
    Data.Bytes.Parser.Internal
  build-depends:
    , base >=4.12 && <5
    , bytestring >=0.10.8 && <0.11
    , byteslice >=0.1.3 && <0.2
    , contiguous >= 0.4 && < 0.6
    , primitive >=0.7 && <0.8
    , text-short >=0.1.3 && <0.2
    , run-st >=0.1 && <0.2
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , bytesmith
    , primitive
    , byteslice
    , tasty-hunit
    , tasty
    , tasty-quickcheck

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , byteslice
    , bytestring
    , gauge
    , primitive
    , bytesmith
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
